# unsloth-qwen3.5

./: .gitignore  README.md  Taskfile.yaml  qwen35_screen_capture.py  qwen35_video_test.py  video_text_output.md
screen_describer/: Cargo.toml
screen_describer/docs/rationale/: 0001_from_llama_cpp_to_llama_cpp_2.md
screen_describer/src/: main.rs
screen_describer_python/: qwen35_screen_capture.py  qwen35_video_test.py
screen_describer_zig/: build.zig  build.zig.zon
screen_describer_zig/docs/rationale/: 0001_zig_port_direct_c_api.md
screen_describer_zig/src/: main.zig
