[package]
name = "screen_describer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
dirs = "6.0"
image = "0.25"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termimad = "0.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
