[package]
name = "screen_describer"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dirs = "6.0"
encoding_rs = "0.8"
image = "0.25"
llama-cpp-2 = { version = "0.1", features = ["mtmd"] }
reqwest = { version = "0.13", features = ["blocking"] }
termimad = "0.34"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
